clean data script

--- a/draft.ipynb
+++ b/draft.ipynb
@@ -167,11 +167,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_1.to_csv('data/canada-aq_clean.csv')"
+    "data_1.to_csv('data/canada-aq_clean.csv',index = None)"
    ]
   }
  ],
