--- a/clean_data_script.ipynb
+++ b/clean_data_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,69 +20,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 6468 entries, 0 to 6467\n",
-      "Data columns (total 30 columns):\n",
-      "Entity                                        6468 non-null object\n",
-      "Code                                          5488 non-null object\n",
-      "Year                                          6468 non-null int64\n",
-      "Unsafe water source (deaths)                  6468 non-null float64\n",
-      "Poor sanitation (deaths)                      6468 non-null float64\n",
-      "No access to handwashing facility (deaths)    6468 non-null float64\n",
-      "Indoor air pollution (deaths)                 6468 non-null float64\n",
-      "Non-exclusive breastfeeding (deaths)          6468 non-null float64\n",
-      "Discontinued breastfeeding (deaths)           6468 non-null float64\n",
-      "Child wasting (deaths)                        6468 non-null float64\n",
-      "Child stunting (deaths)                       6468 non-null float64\n",
-      "Low birth weight (deaths)                     6468 non-null float64\n",
-      "Secondhand smoke (deaths)                     6468 non-null float64\n",
-      "Alcohol use (deaths)                          6468 non-null float64\n",
-      "Drug use (deaths)                             6468 non-null float64\n",
-      "Diet low in fruits (deaths)                   6468 non-null float64\n",
-      "Diet low in vegetables (deaths)               6468 non-null float64\n",
-      "Unsafe sex (deaths)                           6468 non-null float64\n",
-      "Low physical activity (deaths)                6468 non-null float64\n",
-      "High blood sugar (deaths)                     6468 non-null float64\n",
-      "High cholesterol (deaths)                     1561 non-null float64\n",
-      "Obesity (deaths)                              6468 non-null float64\n",
-      "High blood pressure (deaths)                  6468 non-null float64\n",
-      "Smoking (deaths)                              6468 non-null float64\n",
-      "Iron deficiency (deaths)                      6468 non-null float64\n",
-      "Zinc deficiency (deaths)                      6468 non-null float64\n",
-      "Vitamin-A deficiency (deaths)                 6468 non-null float64\n",
-      "Low bone mineral density (deaths)             6468 non-null float64\n",
-      "Air pollution (outdoor & indoor) (deaths)     6468 non-null float64\n",
-      "Outdoor air pollution (deaths)                6467 non-null float64\n",
-      "dtypes: float64(27), int64(1), object(2)\n",
-      "memory usage: 1.5+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "data.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_cleaned = data.drop(['High cholesterol (deaths)'],axis=1)\n",
     "data_cleaned = data_cleaned.dropna()\n",
-    "data_cleaned = data_cleaned.rename(columns = {data_cleaned.columns[0]: 'Country'})"
+    "data_cleaned = data_cleaned.rename(columns = {data_cleaned.columns[0]: 'Country'})\n",
+    "data_cleaned.columns = data_cleaned.columns.str.strip().\\\n",
+    "    str.lower().\\\n",
+    "    str.replace(' ', '_').\\\n",
+    "    str.replace(' ', '_'). \\\n",
+    "    str.replace('(', '').str.replace(')', ''). \\\n",
+    "    str.replace(r'_deaths','')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -92,35 +47,35 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 5488 entries, 0 to 6467\n",
       "Data columns (total 29 columns):\n",
-      "Country                                       5488 non-null object\n",
-      "Code                                          5488 non-null object\n",
-      "Year                                          5488 non-null int64\n",
-      "Unsafe water source (deaths)                  5488 non-null float64\n",
-      "Poor sanitation (deaths)                      5488 non-null float64\n",
-      "No access to handwashing facility (deaths)    5488 non-null float64\n",
-      "Indoor air pollution (deaths)                 5488 non-null float64\n",
-      "Non-exclusive breastfeeding (deaths)          5488 non-null float64\n",
-      "Discontinued breastfeeding (deaths)           5488 non-null float64\n",
-      "Child wasting (deaths)                        5488 non-null float64\n",
-      "Child stunting (deaths)                       5488 non-null float64\n",
-      "Low birth weight (deaths)                     5488 non-null float64\n",
-      "Secondhand smoke (deaths)                     5488 non-null float64\n",
-      "Alcohol use (deaths)                          5488 non-null float64\n",
-      "Drug use (deaths)                             5488 non-null float64\n",
-      "Diet low in fruits (deaths)                   5488 non-null float64\n",
-      "Diet low in vegetables (deaths)               5488 non-null float64\n",
-      "Unsafe sex (deaths)                           5488 non-null float64\n",
-      "Low physical activity (deaths)                5488 non-null float64\n",
-      "High blood sugar (deaths)                     5488 non-null float64\n",
-      "Obesity (deaths)                              5488 non-null float64\n",
-      "High blood pressure (deaths)                  5488 non-null float64\n",
-      "Smoking (deaths)                              5488 non-null float64\n",
-      "Iron deficiency (deaths)                      5488 non-null float64\n",
-      "Zinc deficiency (deaths)                      5488 non-null float64\n",
-      "Vitamin-A deficiency (deaths)                 5488 non-null float64\n",
-      "Low bone mineral density (deaths)             5488 non-null float64\n",
-      "Air pollution (outdoor & indoor) (deaths)     5488 non-null float64\n",
-      "Outdoor air pollution (deaths)                5488 non-null float64\n",
+      "country                              5488 non-null object\n",
+      "code                                 5488 non-null object\n",
+      "year                                 5488 non-null int64\n",
+      "unsafe_water_source                  5488 non-null float64\n",
+      "poor_sanitation                      5488 non-null float64\n",
+      "no_access_to_handwashing_facility    5488 non-null float64\n",
+      "indoor_air_pollution                 5488 non-null float64\n",
+      "non-exclusive_breastfeeding          5488 non-null float64\n",
+      "discontinued_breastfeeding           5488 non-null float64\n",
+      "child_wasting                        5488 non-null float64\n",
+      "child_stunting                       5488 non-null float64\n",
+      "low_birth_weight                     5488 non-null float64\n",
+      "secondhand_smoke                     5488 non-null float64\n",
+      "alcohol_use                          5488 non-null float64\n",
+      "drug_use                             5488 non-null float64\n",
+      "diet_low_in_fruits                   5488 non-null float64\n",
+      "diet_low_in_vegetables               5488 non-null float64\n",
+      "unsafe_sex                           5488 non-null float64\n",
+      "low_physical_activity                5488 non-null float64\n",
+      "high_blood_sugar                     5488 non-null float64\n",
+      "obesity                              5488 non-null float64\n",
+      "high_blood_pressure                  5488 non-null float64\n",
+      "smoking                              5488 non-null float64\n",
+      "iron_deficiency                      5488 non-null float64\n",
+      "zinc_deficiency                      5488 non-null float64\n",
+      "vitamin-a_deficiency                 5488 non-null float64\n",
+      "low_bone_mineral_density             5488 non-null float64\n",
+      "air_pollution_outdoor_&_indoor       5488 non-null float64\n",
+      "outdoor_air_pollution                5488 non-null float64\n",
       "dtypes: float64(26), int64(1), object(2)\n",
       "memory usage: 1.3+ MB\n"
      ]
@@ -132,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -156,27 +111,27 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Code</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Unsafe water source (deaths)</th>\n",
-       "      <th>Poor sanitation (deaths)</th>\n",
-       "      <th>No access to handwashing facility (deaths)</th>\n",
-       "      <th>Indoor air pollution (deaths)</th>\n",
-       "      <th>Non-exclusive breastfeeding (deaths)</th>\n",
-       "      <th>Discontinued breastfeeding (deaths)</th>\n",
-       "      <th>Child wasting (deaths)</th>\n",
+       "      <th>country</th>\n",
+       "      <th>code</th>\n",
+       "      <th>year</th>\n",
+       "      <th>unsafe_water_source</th>\n",
+       "      <th>poor_sanitation</th>\n",
+       "      <th>no_access_to_handwashing_facility</th>\n",
+       "      <th>indoor_air_pollution</th>\n",
+       "      <th>non-exclusive_breastfeeding</th>\n",
+       "      <th>discontinued_breastfeeding</th>\n",
+       "      <th>child_wasting</th>\n",
        "      <th>...</th>\n",
-       "      <th>High blood sugar (deaths)</th>\n",
-       "      <th>Obesity (deaths)</th>\n",
-       "      <th>High blood pressure (deaths)</th>\n",
-       "      <th>Smoking (deaths)</th>\n",
-       "      <th>Iron deficiency (deaths)</th>\n",
-       "      <th>Zinc deficiency (deaths)</th>\n",
-       "      <th>Vitamin-A deficiency (deaths)</th>\n",
-       "      <th>Low bone mineral density (deaths)</th>\n",
-       "      <th>Air pollution (outdoor &amp; indoor) (deaths)</th>\n",
-       "      <th>Outdoor air pollution (deaths)</th>\n",
+       "      <th>high_blood_sugar</th>\n",
+       "      <th>obesity</th>\n",
+       "      <th>high_blood_pressure</th>\n",
+       "      <th>smoking</th>\n",
+       "      <th>iron_deficiency</th>\n",
+       "      <th>zinc_deficiency</th>\n",
+       "      <th>vitamin-a_deficiency</th>\n",
+       "      <th>low_bone_mineral_density</th>\n",
+       "      <th>air_pollution_outdoor_&amp;_indoor</th>\n",
+       "      <th>outdoor_air_pollution</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -306,66 +261,59 @@
        "</div>"
       ],
       "text/plain": [
-       "       Country Code  Year  Unsafe water source (deaths)  \\\n",
-       "0  Afghanistan  AFG  1990                   7554.049543   \n",
-       "1  Afghanistan  AFG  1991                   7359.676749   \n",
-       "2  Afghanistan  AFG  1992                   7650.437822   \n",
-       "3  Afghanistan  AFG  1993                  10270.731380   \n",
-       "4  Afghanistan  AFG  1994                  11409.177110   \n",
+       "       country code  year  unsafe_water_source  poor_sanitation  \\\n",
+       "0  Afghanistan  AFG  1990          7554.049543      5887.747628   \n",
+       "1  Afghanistan  AFG  1991          7359.676749      5732.770160   \n",
+       "2  Afghanistan  AFG  1992          7650.437822      5954.804987   \n",
+       "3  Afghanistan  AFG  1993         10270.731380      7986.736613   \n",
+       "4  Afghanistan  AFG  1994         11409.177110      8863.010065   \n",
        "\n",
-       "   Poor sanitation (deaths)  No access to handwashing facility (deaths)  \\\n",
-       "0               5887.747628                                 5412.314513   \n",
-       "1               5732.770160                                 5287.891103   \n",
-       "2               5954.804987                                 5506.657363   \n",
-       "3               7986.736613                                 7104.620351   \n",
-       "4               8863.010065                                 8051.515953   \n",
+       "   no_access_to_handwashing_facility  indoor_air_pollution  \\\n",
+       "0                        5412.314513           22388.49723   \n",
+       "1                        5287.891103           22128.75821   \n",
+       "2                        5506.657363           22873.76879   \n",
+       "3                        7104.620351           25599.75628   \n",
+       "4                        8051.515953           28013.16720   \n",
        "\n",
-       "   Indoor air pollution (deaths)  Non-exclusive breastfeeding (deaths)  \\\n",
-       "0                    22388.49723                           3221.138842   \n",
-       "1                    22128.75821                           3150.559597   \n",
-       "2                    22873.76879                           3331.349048   \n",
-       "3                    25599.75628                           4477.006100   \n",
-       "4                    28013.16720                           5102.622054   \n",
+       "   non-exclusive_breastfeeding  discontinued_breastfeeding  child_wasting  \\\n",
+       "0                  3221.138842                  156.097553    22778.84925   \n",
+       "1                  3150.559597                  151.539851    22292.69111   \n",
+       "2                  3331.349048                  156.609194    23102.19794   \n",
+       "3                  4477.006100                  206.834451    27902.66996   \n",
+       "4                  5102.622054                  233.930571    32929.00593   \n",
        "\n",
-       "   Discontinued breastfeeding (deaths)  Child wasting (deaths)  ...  \\\n",
-       "0                           156.097553             22778.84925  ...   \n",
-       "1                           151.539851             22292.69111  ...   \n",
-       "2                           156.609194             23102.19794  ...   \n",
-       "3                           206.834451             27902.66996  ...   \n",
-       "4                           233.930571             32929.00593  ...   \n",
+       "   ...  high_blood_sugar      obesity  high_blood_pressure      smoking  \\\n",
+       "0  ...       21610.06616  7701.581280          28183.98335  6393.667372   \n",
+       "1  ...       21824.93804  7747.774903          28435.39751  6429.253320   \n",
+       "2  ...       22418.69881  7991.018971          29173.61120  6561.054957   \n",
+       "3  ...       23140.51117  8281.564408          30074.76091  6731.972560   \n",
+       "4  ...       23725.07008  8472.297780          30809.49117  6889.328118   \n",
        "\n",
-       "   High blood sugar (deaths)  Obesity (deaths)  High blood pressure (deaths)  \\\n",
-       "0                21610.06616       7701.581280                   28183.98335   \n",
-       "1                21824.93804       7747.774903                   28435.39751   \n",
-       "2                22418.69881       7991.018971                   29173.61120   \n",
-       "3                23140.51117       8281.564408                   30074.76091   \n",
-       "4                23725.07008       8472.297780                   30809.49117   \n",
+       "   iron_deficiency  zinc_deficiency  vitamin-a_deficiency  \\\n",
+       "0       726.431294       501.020704           9344.131952   \n",
+       "1       739.245799       523.865919           9330.182378   \n",
+       "2       873.485341       557.567886           9769.844533   \n",
+       "3      1040.047422       676.375535          11433.769490   \n",
+       "4      1101.764645       858.483430          12936.955860   \n",
        "\n",
-       "   Smoking (deaths)  Iron deficiency (deaths)  Zinc deficiency (deaths)  \\\n",
-       "0       6393.667372                726.431294                501.020704   \n",
-       "1       6429.253320                739.245799                523.865919   \n",
-       "2       6561.054957                873.485341                557.567886   \n",
-       "3       6731.972560               1040.047422                676.375535   \n",
-       "4       6889.328118               1101.764645                858.483430   \n",
+       "   low_bone_mineral_density  air_pollution_outdoor_&_indoor  \\\n",
+       "0                374.844056                     26598.00673   \n",
+       "1                379.854237                     26379.53222   \n",
+       "2                388.130434                     27263.12791   \n",
+       "3                405.577931                     30495.56150   \n",
+       "4                415.349195                     33323.16140   \n",
        "\n",
-       "   Vitamin-A deficiency (deaths)  Low bone mineral density (deaths)  \\\n",
-       "0                    9344.131952                         374.844056   \n",
-       "1                    9330.182378                         379.854237   \n",
-       "2                    9769.844533                         388.130434   \n",
-       "3                   11433.769490                         405.577931   \n",
-       "4                   12936.955860                         415.349195   \n",
-       "\n",
-       "   Air pollution (outdoor & indoor) (deaths)  Outdoor air pollution (deaths)  \n",
-       "0                                26598.00673                         4383.83  \n",
-       "1                                26379.53222                         4426.36  \n",
-       "2                                27263.12791                         4568.91  \n",
-       "3                                30495.56150                         5080.29  \n",
-       "4                                33323.16140                         5499.23  \n",
+       "   outdoor_air_pollution  \n",
+       "0                4383.83  \n",
+       "1                4426.36  \n",
+       "2                4568.91  \n",
+       "3                5080.29  \n",
+       "4                5499.23  \n",
        "\n",
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
