modify map rounded percentage

--- a/script/script_map_plot.ipynb
+++ b/script/script_map_plot.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import altair as alt\n",
     "import json\n",
-    "import geopandas as gpd"
+    "import geopandas as gpd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -133,21 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.6/site-packages/pandas/core/frame.py:4102: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  errors=errors,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df1 = df.query(\"year == 2017\")\n",
     "df1.drop(['country'], axis =1 ,inplace = True)"
@@ -155,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,6 +205,7 @@
     "    draw_map('properties.smoking')\n",
     "    \n",
     "    \"\"\"\n",
+    "    \n",
     "    p_map = alt.Chart(source, \n",
     "                      title = \"Death percentage of {} among countries in 2017\".format(cols[11:].replace('_',' '))\n",
     "                     ).mark_geoshape(\n",
@@ -223,17 +213,19 @@
     "        stroke='black'\n",
     "    ).encode(\n",
     "        alt.Color(cols, type='quantitative', \n",
-    "                  scale=alt.Scale(scheme='yelloworangered'),\n",
+    "                  scale=alt.Scale(scheme='yelloworangered'), \n",
     "                  title = \"Percentage of death\"),\n",
-    "         tooltip = alt.Tooltip(['properties.country:O',\n",
-    "                                '{}:Q'.format(cols)])\n",
+    "         tooltip = [alt.Tooltip('properties.country:O', title = 'country'), \n",
+    "                    alt.Tooltip('{}:Q'.format(cols), title = '{}'.format(cols[11:].replace('_',' ')), \n",
+    "                                format = \".2f\")]\n",
     "    ).properties(width=700, height=500)\n",
-    "    return p_map"
+    "    return  p_map\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -46945,10 +46937,13 @@
         "tooltip": [
          {
           "field": "properties.country",
+          "title": "country",
           "type": "ordinal"
          },
          {
           "field": "properties.smoking",
+          "format": ".2f",
+          "title": "smoking",
           "type": "quantitative"
          }
         ]
@@ -46971,7 +46966,7 @@
        "https://altair-viz.github.io/user_guide/troubleshooting.html\n"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
