--- a/script/script_bar-chart.ipynb
+++ b/script/script_bar-chart.ipynb
@@ -94,7 +94,7 @@
     "    opacity = alt.condition(selection, alt.value(0.9), alt.value(0.2))\n",
     ").properties(width =640,\n",
     "             height = 450,\n",
-    "             title = 'Death by risk factors in 2017'\n",
+    "             title = 'Global death by risk factors in 2017 (in million)'\n",
     "            ).configure_title(fontSize=25\n",
     "                             ).configure_axis(\n",
     "    labelFontSize=11,\n",
@@ -382,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
